Update code to render better images, have test cases

--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "license": "ISC",
     "dependencies": {
         "inquirer": "8.2.4"
+    },
+    "scripts":{
+        "test": "jest"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@types/jest": "^29.5.0",
+        "jest": "^24.9.0"
     }
 
 
